[package]
name = "rsl"
version = "0.1.0"
authors = ["Kevin Du <kkxandeer@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[[bin]]
name = "display"
path = "src/display.rs"

[[bin]]
name = "format"
path = "src/format.rs"

[[bin]]
name = "enum"
path = "src/enum.rs"

[[bin]]
name = "linked-list"
path = "src/linked-list.rs"

[[bin]]
name = "for"
path = "src/for.rs"

[[bin]]
name = "match"
path = "src/match.rs"
